--- a/pet-place/Base.lproj/Main.storyboard
+++ b/pet-place/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12118" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="E7K-Hg-z6a">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12120" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="E7K-Hg-z6a">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12086"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Navigation items with more than one left or right bar item" minToolsVersion="7.0"/>
@@ -230,7 +230,7 @@
                                             </imageView>
                                             <cells>
                                                 <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleAspectFill" reuseIdentifier="PlaceCell" id="qID-Dl-Qrd" userLabel="PlaceCell" customClass="StoreCollectionViewCell" customModule="pet_place" customModuleProvider="target">
-                                                    <rect key="frame" x="91.5" y="0.0" width="172" height="172"/>
+                                                    <rect key="frame" x="92" y="0.0" width="172" height="172"/>
                                                     <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                                     <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
                                                         <rect key="frame" x="0.0" y="0.0" width="172" height="172"/>
@@ -409,7 +409,7 @@
                     </navigationItem>
                     <connections>
                         <outlet property="tableInsideHome" destination="a5T-dR-qDy" id="iHb-RW-v2N"/>
-                        <segue destination="mjH-OC-YJ0" kind="show" identifier="performSearch" id="eYV-Rn-ftk"/>
+                        <segue destination="9eT-3P-GQW" kind="show" identifier="performSearch" id="G9O-mT-MhX"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="CJG-E2-TwW" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -424,7 +424,7 @@
                     <toolbarItems/>
                     <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
                     <size key="freeformSize" width="375" height="667"/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="g3i-Ht-iB7">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" id="g3i-Ht-iB7">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
@@ -908,7 +908,7 @@
                                 <rect key="frame" x="0.0" y="64" width="375" height="554"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="Cell" textLabel="nP1-Ur-q2v" style="IBUITableViewCellStyleDefault" id="JKZ-8A-RTb">
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="Cell" textLabel="nP1-Ur-q2v" detailTextLabel="9sC-BO-nVO" style="IBUITableViewCellStyleValue1" id="JKZ-8A-RTb">
                                         <rect key="frame" x="0.0" y="28" width="375" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="JKZ-8A-RTb" id="CS6-U4-E9U">
@@ -916,7 +916,14 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="nP1-Ur-q2v">
-                                                    <rect key="frame" x="15" y="0.0" width="345" height="43.5"/>
+                                                    <rect key="frame" x="15" y="12" width="33.5" height="20.5"/>
+                                                    <autoresizingMask key="autoresizingMask"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <nil key="textColor"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Detail" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="9sC-BO-nVO">
+                                                    <rect key="frame" x="316" y="12" width="44" height="20.5"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
@@ -946,7 +953,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="CqD-a0-dMe" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2653.5999999999999" y="-146.17691154422789"/>
+            <point key="canvasLocation" x="3233" y="-721"/>
         </scene>
         <!--Store Map View Controller-->
         <scene sceneID="Uck-4Y-qDH">
@@ -980,7 +987,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dCI-l8-mde" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="3500" y="-107"/>
+            <point key="canvasLocation" x="3658" y="116"/>
         </scene>
         <!--Store Detail View Controller-->
         <scene sceneID="V94-mN-88b">
@@ -1527,7 +1534,7 @@
                     <toolbarItems/>
                     <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
                     <size key="freeformSize" width="375" height="667"/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="EG7-Sh-hMs">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" misplaced="YES" id="EG7-Sh-hMs">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
@@ -1539,6 +1546,66 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="6VK-1U-K3N" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1080.8" y="130.88455772113943"/>
+        </scene>
+        <!--Load Store View Controller-->
+        <scene sceneID="5Uo-I4-uzv">
+            <objects>
+                <viewController storyboardIdentifier="LoadStoreViewController" id="9eT-3P-GQW" customClass="LoadStoreViewController" customModule="pet_place" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="rvr-7f-4dZ"/>
+                        <viewControllerLayoutGuide type="bottom" id="sTG-qR-5iM"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="XUm-X0-5j0">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="입력" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="rRw-Xs-quW">
+                                <rect key="frame" x="16" y="178" width="343" height="30"/>
+                                <nil key="textColor"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no"/>
+                            </textField>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="아래에 장소 이름 또는 전화번호 뒷자리를 입력해주세요 (부분 검색 가능)" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GVn-Z9-fbU">
+                                <rect key="frame" x="16" y="104" width="343" height="34"/>
+                                <fontDescription key="fontDescription" name="AppleSDGothicNeo-Regular" family="Apple SD Gothic Neo" pointSize="14"/>
+                                <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fTE-Ps-5Uk">
+                                <rect key="frame" x="137" y="248" width="100" height="50"/>
+                                <color key="backgroundColor" red="0.80000001190000003" green="0.80000001190000003" blue="0.80000001190000003" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="8sI-eG-13j"/>
+                                    <constraint firstAttribute="width" constant="100" id="R0m-0t-840"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="YiSunShinDotumM" family="YiSunShin Dotum M" pointSize="15"/>
+                                <state key="normal" title="불러오기"/>
+                                <connections>
+                                    <action selector="tapShowResult:" destination="9eT-3P-GQW" eventType="touchUpInside" id="xO8-t0-a6z"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="GVn-Z9-fbU" firstAttribute="trailing" secondItem="XUm-X0-5j0" secondAttribute="trailingMargin" id="1ta-WY-kCy"/>
+                            <constraint firstItem="GVn-Z9-fbU" firstAttribute="leading" secondItem="XUm-X0-5j0" secondAttribute="leadingMargin" id="He1-C3-QnL"/>
+                            <constraint firstItem="rRw-Xs-quW" firstAttribute="leading" secondItem="XUm-X0-5j0" secondAttribute="leadingMargin" id="QkT-6Y-YfP"/>
+                            <constraint firstItem="GVn-Z9-fbU" firstAttribute="top" secondItem="rvr-7f-4dZ" secondAttribute="bottom" constant="40" id="UWg-oF-eyo"/>
+                            <constraint firstItem="fTE-Ps-5Uk" firstAttribute="centerX" secondItem="XUm-X0-5j0" secondAttribute="centerX" id="fjL-3z-jed"/>
+                            <constraint firstItem="fTE-Ps-5Uk" firstAttribute="top" secondItem="rRw-Xs-quW" secondAttribute="bottom" constant="40" id="hGs-CN-x2z"/>
+                            <constraint firstItem="rRw-Xs-quW" firstAttribute="top" secondItem="GVn-Z9-fbU" secondAttribute="bottom" constant="40" id="nBf-Wc-487"/>
+                            <constraint firstItem="rRw-Xs-quW" firstAttribute="trailing" secondItem="XUm-X0-5j0" secondAttribute="trailingMargin" id="vAg-L8-6zD"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="inputField" destination="rRw-Xs-quW" id="99J-1u-9Kq"/>
+                        <outlet property="loadButton" destination="fTE-Ps-5Uk" id="QjD-jg-y5b"/>
+                        <segue destination="mjH-OC-YJ0" kind="show" identifier="showResult" id="Maa-NL-Vk7"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="0bK-wf-NrL" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2335" y="-722"/>
         </scene>
     </scenes>
     <resources>
