--- a/pet-place/OverlayView.xib
+++ b/pet-place/OverlayView.xib
@@ -1,11 +1,20 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="9532" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12120" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="이순신돋움체M.otf">
+            <string>YiSunShinDotumM</string>
+        </array>
+    </customFonts>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="OverlayView" customModule="ZappShopFinder" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="OverlayView" customModule="pet_place" customModuleProvider="target">
             <connections>
                 <outlet property="emptyIcon" destination="XCY-Yn-HGj" id="rmD-AK-ZAR"/>
                 <outlet property="titleLabel" destination="38P-fh-Tln" id="0X0-fD-x6V"/>
@@ -17,40 +26,44 @@
             <rect key="frame" x="0.0" y="0.0" width="200" height="170"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <visualEffectView opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QSe-3H-Shi">
+                <visualEffectView opaque="NO" clipsSubviews="YES" alpha="0.65000000000000002" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QSe-3H-Shi">
                     <rect key="frame" x="0.0" y="0.0" width="200" height="170"/>
                     <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="x7n-lc-xIx">
                         <rect key="frame" x="0.0" y="0.0" width="200" height="170"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="loadingIndicator" translatesAutoresizingMaskIntoConstraints="NO" id="XCY-Yn-HGj">
+                                <rect key="frame" x="77.5" y="62.5" width="45" height="45"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="45" id="2VY-a2-Rh7"/>
+                                    <constraint firstAttribute="width" constant="45" id="Gub-wl-ZhW"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Loading..." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="38P-fh-Tln">
+                                <rect key="frame" x="63" y="122.5" width="75" height="17.5"/>
+                                <fontDescription key="fontDescription" name="YiSunShinDotumM" family="YiSunShin Dotum M" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <constraints>
+                            <constraint firstItem="XCY-Yn-HGj" firstAttribute="centerY" secondItem="x7n-lc-xIx" secondAttribute="centerY" id="7h9-as-9Cf"/>
+                            <constraint firstItem="38P-fh-Tln" firstAttribute="centerX" secondItem="x7n-lc-xIx" secondAttribute="centerX" id="MrL-gq-baE"/>
+                            <constraint firstItem="38P-fh-Tln" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="x7n-lc-xIx" secondAttribute="leading" constant="10" id="aFE-xY-xyT"/>
+                            <constraint firstItem="38P-fh-Tln" firstAttribute="top" secondItem="XCY-Yn-HGj" secondAttribute="bottom" constant="15" id="bNl-Rd-J4t"/>
+                            <constraint firstItem="XCY-Yn-HGj" firstAttribute="centerX" secondItem="x7n-lc-xIx" secondAttribute="centerX" id="fwt-lZ-4oC"/>
+                            <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="38P-fh-Tln" secondAttribute="trailing" constant="10" id="gqB-Wc-ugm"/>
+                        </constraints>
                     </view>
+                    <color key="backgroundColor" red="0.6555559961928934" green="0.6555559961928934" blue="0.6555559961928934" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <blurEffect style="light"/>
                 </visualEffectView>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Loading..." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="38P-fh-Tln">
-                    <rect key="frame" x="60" y="111" width="80" height="22"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="18"/>
-                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                    <nil key="highlightedColor"/>
-                </label>
-                <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="loadingIndicator" translatesAutoresizingMaskIntoConstraints="NO" id="XCY-Yn-HGj">
-                    <rect key="frame" x="89" y="74" width="22" height="22"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="22" id="2VY-a2-Rh7"/>
-                        <constraint firstAttribute="width" constant="22" id="Gub-wl-ZhW"/>
-                    </constraints>
-                </imageView>
             </subviews>
-            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+            <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstAttribute="trailing" secondItem="QSe-3H-Shi" secondAttribute="trailing" id="0UW-oS-Upi"/>
-                <constraint firstItem="38P-fh-Tln" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="iN0-l3-epB" secondAttribute="leading" constant="10" id="9x4-mG-Dlp"/>
-                <constraint firstItem="38P-fh-Tln" firstAttribute="top" secondItem="XCY-Yn-HGj" secondAttribute="bottom" constant="15" id="J7P-sZ-plN"/>
-                <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="38P-fh-Tln" secondAttribute="bottom" constant="10" id="Q8X-PP-Qpv"/>
                 <constraint firstAttribute="bottom" secondItem="QSe-3H-Shi" secondAttribute="bottom" id="bE3-CX-EJZ"/>
-                <constraint firstItem="38P-fh-Tln" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="bzg-Qk-mkM"/>
-                <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="38P-fh-Tln" secondAttribute="trailing" constant="10" id="ipW-xC-7mf"/>
-                <constraint firstItem="XCY-Yn-HGj" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="l61-rl-fcI"/>
                 <constraint firstItem="QSe-3H-Shi" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="rDQ-mx-MYw"/>
-                <constraint firstItem="XCY-Yn-HGj" firstAttribute="centerX" secondItem="iN0-l3-epB" secondAttribute="centerX" id="rpn-ZS-Rtp"/>
                 <constraint firstItem="QSe-3H-Shi" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="sPL-mS-0JL"/>
             </constraints>
             <nil key="simulatedStatusBarMetrics"/>
@@ -59,6 +72,11 @@
         </view>
     </objects>
     <resources>
-        <image name="loadingIndicator" width="22" height="22"/>
+        <image name="loadingIndicator" width="64" height="64"/>
     </resources>
+    <simulatedMetricsContainer key="defaultSimulatedMetrics">
+        <simulatedStatusBarMetrics key="statusBar"/>
+        <simulatedOrientationMetrics key="orientation"/>
+        <simulatedScreenMetrics key="destination" type="retina4_7.fullscreen"/>
+    </simulatedMetricsContainer>
 </document>
